--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <a href="#">Home</a>
             <a href="#">About</a>
             <a href="#">How it Works</a>
-            <a href="#">Services</a>
+            <a href="#">Service</a>
         </div>
     </footer>
 
