--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
         <section class="cta-section">
             <h2>Ready to focus better</h2>
-            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+            <p>This template instantly level up our presence.” – Studio Vertex</p>
             <button class="cta-button">Get Started Free</button>
             <img src="Assets/wc-big.png" alt="Webflow Conf Preview">
         </section>
